# academic_grant

./: CMakeLists.txt  ReadMe.txt  build.sh
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/core/: ScholarshipCalculator.cpp  ScholarshipCalculator.h
backend/src/database/: DataBaseManager.cpp  DataBaseManager.h  Models.h
database/init/: create_tables.sql  test_data.sql
include/core/: AuthManager.h  PasswordHasher.h  ScholarshipCalculator.h
include/database/: DataBaseManager.h  Models.h
sql/: create_tables.sql  test_data.sql  update_passwords_hashes.sql
src/: main.cpp
src/core/: AuthManager.cpp  ScholarshipCalculator.cpp
src/database/: DataBaseManager.cpp  Models.cpp
